Add group BEHAT
